--- a/.github/workflows/python_test.yml
+++ b/.github/workflows/python_test.yml
@@ -20,4 +20,4 @@ jobs:
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
       - name: Test with unittest
         run: |
-          python -m unittest
+          python -m unittest discover
