--- a/.github/workflows/compile_latex.yml
+++ b/.github/workflows/compile_latex.yml
@@ -13,7 +13,7 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  build:
+  check_latex:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -21,7 +21,17 @@ jobs:
     steps:
       - name: Set up Git repository
         uses: actions/checkout@v2
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - name: "Check report existence"
+        uses: andstor/file-existence-action@v1
+        id: check_report
+        with:
+          files: "report/main.tex"
+  build:
+    if: steps.check_report.outputs.files_exists == 'true'
+    runs-on: ubuntu-latest
+    steps:
+      - name: Set up Git repository
+        uses: actions/checkout@v2
       - name: setup python
         uses: actions/setup-python@v2
         with:
