update latex check

--- a/.github/workflows/compile_latex.yml
+++ b/.github/workflows/compile_latex.yml
@@ -16,7 +16,6 @@ jobs:
   check_latex:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       - name: Set up Git repository
@@ -26,29 +25,28 @@ jobs:
         id: check_report
         with:
           files: "report/main.tex"
-  build:
-    if: steps.check_report.outputs.files_exists == 'true'
-    runs-on: ubuntu-latest
-    steps:
-      - name: Set up Git repository
-        uses: actions/checkout@v2
       - name: setup python
         uses: actions/setup-python@v2
+        if: check_latex.steps.check_report.outputs.files_exists == 'true'
         with:
           python-version: 3.8
       - name: Install dependencies
+        if: check_latex.steps.check_report.outputs.files_exists == 'true'
         run: |
           python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
       - name: Test with unittest discover
+        if: check_latex.steps.check_report.outputs.files_exists == 'true'
         run: |
           python -m unittest
       - name: Compile LaTeX document
+        if: check_latex.steps.check_report.outputs.files_exists == 'true'
         uses: dante-ev/latex-action@v0.2.0
         with:
           working_directory: report
           root_file: main.tex
       - uses: actions/upload-artifact@v2
+        if: check_latex.steps.check_report.outputs.files_exists == 'true'
         with:
           name: compiled_document.pdf
           path: report/main.pdf
